--- a/index.html
+++ b/index.html
@@ -27,12 +27,21 @@
             Um informático completo para atender a todos os seus pedidos sem terceirizar serviços
         </p>
         
-        <nav id="menuprincipal">
-            <a href="#sobremim">Sobre mim</a>
-            <a href="#percursoescolar">Percurso Escolar</a>
-            <a href="#percursoprofissional">Percurso Profissional</a>
-            <a href="#services">Serviços</a>
-        </nav>
+        <div class="container">
+            <input type="checkbox" id="checkbox-menu">
+            <label for="checkbox-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+
+            <nav id="menuprincipal">
+                <a href="#sobremim">Sobre mim</a>
+                <a href="#percursoescolar">Percurso Escolar</a>
+                <a href="#percursoprofissional">Percurso Profissional</a>
+                <a href="#services">Serviços</a>
+            </nav>
+        </div>
     </header>
 
     <main>
