--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
             <nav id="menuprincipal">
                 <a href="#sobremim">Sobre mim</a>
+                <a href="#downloadmenu">Certificados</a>
                 <a href="#percursoescolar">Percurso Escolar</a>
                 <a href="#percursoprofissional">Percurso Profissional</a>
                 <a href="#services">Serviços</a>
@@ -82,11 +83,11 @@
                 </p>
             </article>
 
-            <h3>
-                Quer saber mais?
-            </h3>
-
                 <nav id="downloadmenu">
+                    <h3>
+                        Quer saber mais?
+                    </h3>
+
                     <p class="download">
                         Certificados
                     </p>
