--- a/indexen.html
+++ b/indexen.html
@@ -27,12 +27,22 @@
             A complete IT to fulfill all your orders without outsourcing services
         </p>
 
-        <nav id="menuprincipal">
-            <a href="#sobremim">About me</a>
-            <a href="#percursoescolar">Educational path</a>
-            <a href="#percursoprofissional">Career path</a>
-            <a href="#services">Services</a>
-        </nav>
+        <div class="container">
+            <input type="checkbox" id="checkbox-menu">
+            <label for="checkbox-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+
+            <nav id="menuprincipal">
+                <a href="#sobremim">About me</a>
+                <a href="#downloadmenu">Certificates</a>
+                <a href="#percursoescolar">Educational path</a>
+                <a href="#percursoprofissional">Career path</a>
+                <a href="#services">Services</a>
+            </nav>
+        </div>
     </header>
 
     <main>
@@ -73,11 +83,11 @@
                 </p>
             </article>
 
-            <h3>
-                Do you want to know more?
-            </h3>
-
             <nav id="downloadmenu">
+                <h3>
+                    Do you want to know more?
+                </h3>
+                
                 <p class="download">
                     Certificates
                 </p>
