--- a/indexfr.html
+++ b/indexfr.html
@@ -27,12 +27,22 @@
             Un informaticien complet pour répondre à toutes vos demandes sans externaliser les services
         </p>
 
-        <nav id="menuprincipal">
-            <a href="#sobremim">Sur moi</a>
-            <a href="#percursoescolar">Parcours Éducatif</a>
-            <a href="#percursoprofissional">Parcours Professionnel</a>
-            <a href="#services">Services</a>
-        </nav>
+        <div class="container">
+            <input type="checkbox" id="checkbox-menu">
+            <label for="checkbox-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+
+            <nav id="menuprincipal">
+                <a href="#sobremim">Sur moi</a>
+                <a href="#downloadmenu">Certificats</a>
+                <a href="#percursoescolar">Parcours Éducatif</a>
+                <a href="#percursoprofissional">Parcours Professionnel</a>
+                <a href="#services">Services</a>
+            </nav>
+        </div>
     </header>
 
     <main>
@@ -73,11 +83,11 @@
                 </p>
             </article>
 
-            <h3>
-                Voulez-vous en savoir plus?
-            </h3>
-
             <nav id="downloadmenu">
+                <h3>
+                    Voulez-vous en savoir plus?
+                </h3>
+                
                 <p class="download">
                     Certificats
                 </p>
