--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             </label>
 
             <nav id="menuprincipal">
+                <a href="#">Home</a>
                 <a href="#sobremim">Sobre mim</a>
                 <a href="#downloadmenu">Certificados</a>
                 <a href="#percursoescolar">Percurso Escolar</a>
