--- a/indexen.html
+++ b/indexen.html
@@ -36,6 +36,7 @@
             </label>
 
             <nav id="menuprincipal">
+                <a href="#">Home</a>
                 <a href="#sobremim">About me</a>
                 <a href="#downloadmenu">Certificates</a>
                 <a href="#percursoescolar">Educational path</a>
