--- a/indexfr.html
+++ b/indexfr.html
@@ -36,6 +36,7 @@
             </label>
 
             <nav id="menuprincipal">
+                <a href="#">Home</a>
                 <a href="#sobremim">Sur moi</a>
                 <a href="#downloadmenu">Certificats</a>
                 <a href="#percursoescolar">Parcours Éducatif</a>
