--- a/indexfr.html
+++ b/indexfr.html
@@ -15,7 +15,7 @@
             <div class="language">
                 <p class="lang">Language</p>
                 <a href="indexen.html">English</a>
-                <a href="index.html">Português</a>
+                <a href="indexpt.html">Português</a>
             </div>
         </nav>
 
