--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <header class="showcase">
         <div class="container showcase-inner">
             <h1>Welcome</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum eaque cumque expedita. Aut dicta qui maiores deleniti rerum asperiores dolores?</p>
+            <p>Choose your language:</p>
 
-            <a href="#" class="btn"><img src="../danycoutinho.github.io/imgs/flags/united-kingdom.png" alt="">English<img src="../danycoutinho.github.io/imgs/flags/united-states.png" alt=""></a>
+            <a href="indexen.html" class="btn"><img src="../danycoutinho.github.io/imgs/flags/united-kingdom.png" alt="">English<img src="../danycoutinho.github.io/imgs/flags/united-states.png" alt=""></a>
 
-            <a href="#" class="btn"><img src="../danycoutinho.github.io/imgs/flags/portugal.png" alt="">Portuguese<img src="../danycoutinho.github.io/imgs/flags/brazil.png" alt=""></a>
+            <a href="indexpt.html" class="btn"><img src="../danycoutinho.github.io/imgs/flags/portugal.png" alt="">Portuguese<img src="../danycoutinho.github.io/imgs/flags/brazil.png" alt=""></a>
 
-            <a href="#" class="btn"><img src="../danycoutinho.github.io/imgs/flags/france.png" alt="">French<img src="../danycoutinho.github.io/imgs/flags/switzerland.png" alt=""></a>
+            <a href="indexfr.html" class="btn"><img src="../danycoutinho.github.io/imgs/flags/france.png" alt="">French<img src="../danycoutinho.github.io/imgs/flags/switzerland.png" alt=""></a>
         </div>
     </header>
 </body>
