--- a/indexpt.html
+++ b/indexpt.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/index.css">
     <link rel="stylesheet" href="style/menu.css">
+    <link rel="stylesheet" href="style/style.css">
     <link rel="icon" type="imagem/png" href="imgs/Favicon.png" />
     <title>Dany Coutinho</title>
 </head>
@@ -19,9 +20,12 @@
                 <div>
                     <div>
                         <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="indexen.html">Home</a></li>
-                            <li><a href="indexfr.html">Home</a></li>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#sobremim">Sobre mim</a></li>
+                            <li><a href="#downloadmenu">Certificados</a></li>
+                            <li><a href="#percursoescolar">Percurso Escolar</a></li>
+                            <li><a href="#percursoprofissional">Percurso Profissional</a></li>
+                            <li><a href="#services">Serviços</a></li>
                         </ul>
                     </div>
                 </div>
@@ -44,7 +48,7 @@
             Um informático completo para atender a todos os seus pedidos sem terceirizar serviços
         </p>
         
-        <div class="container">
+        <!--<div class="container">
             <input type="checkbox" id="checkbox-menu">
             <label for="checkbox-menu">
                 <span></span>
@@ -60,7 +64,7 @@
                 <a href="#percursoprofissional">Percurso Profissional</a>
                 <a href="#services">Serviços</a>
             </nav>
-        </div>
+        </div>-->
     </header>
 
     <main>
