--- a/indexen.html
+++ b/indexen.html
@@ -5,12 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/index.css">
+    <link rel="stylesheet" href="style/menu.css">
+    <link rel="stylesheet" href="style/style.css">
     <link rel="icon" type="imagem/png" href="imgs/Favicon.png" />
     <title>Dany Coutinho</title>
 </head>
 
 <body>
     <header>
+        <div class="menu-wrap">
+            <input type="checkbox" class="toggler">
+            <div class="hamburguer"><div></div></div>
+            <div class="menu">
+                <div>
+                    <div>
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#sobremim">Sobre mim</a></li>
+                            <li><a href="#downloadmenu">Certificados</a></li>
+                            <li><a href="#percursoescolar">Percurso Escolar</a></li>
+                            <li><a href="#percursoprofissional">Percurso Profissional</a></li>
+                            <li><a href="#services">Serviços</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <nav id="languagemenu">
             <div class="language">
                 <p class="lang">Language</p>
@@ -27,7 +48,7 @@
             A complete IT to fulfill all your orders without outsourcing services
         </p>
 
-        <div class="container">
+        <!--<div class="container">
             <input type="checkbox" id="checkbox-menu">
             <label for="checkbox-menu">
                 <span></span>
@@ -43,7 +64,7 @@
                 <a href="#percursoprofissional">Career path</a>
                 <a href="#services">Services</a>
             </nav>
-        </div>
+        </div>-->
     </header>
 
     <main>
