--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="menu-wrap">
+    <!--<div class="menu-wrap">
         <input type="checkbox" class="toggler">
         <div class="hamburguer"><div></div></div>
         <div class="menu">
@@ -25,7 +25,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
 
     <header class="showcase">
         <div class="container showcase-inner">
